[tool.poetry]
name = "toolbox"
version = "0.1.0"
description = ""
authors = ["yim7 <yimchiu7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
you-get = "^0.4.1355"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
flake8 = "^3.7"
jupyterlab = "^1.2"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.poetry.scripts]
toolbox = 'toolbox.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


